Highlight HeliosSynerga and Project ID in dashboard header

--- a/heliossynerga/dashboard/index.html
+++ b/heliossynerga/dashboard/index.html
@@ -70,6 +70,27 @@
       font-size: 1.1rem;
     }
 
+    .brand-highlight {
+      color: #ffffff;
+      text-shadow: 0 0 10px rgba(255, 255, 255, 0.8), 0 0 20px rgba(255, 255, 255, 0.35);
+      font-weight: 800;
+    }
+
+    .project-id-pill {
+      display: inline-flex;
+      align-items: center;
+      border-radius: 999px;
+      padding: 0.2rem 0.6rem;
+      border: 1px solid rgba(255, 255, 255, 0.55);
+      color: #ffffff;
+      background: rgba(255, 255, 255, 0.08);
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.75);
+      font-size: 0.74rem;
+      font-weight: 800;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+    }
+
     .live-pill {
       display: inline-flex;
       align-items: center;
@@ -393,7 +414,8 @@
   <main class="dashboard">
     <header class="header glass-panel">
       <div class="header-brand">
-        <span>Helios Synerga</span>
+        <span class="brand-highlight">HeliosSynerga</span>
+        <span class="project-id-pill">Project ID 621</span>
         <span class="live-pill"><span class="live-dot"></span>LIVE</span>
       </div>
       <div class="header-stats">
